# Uni-CLI

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GOVERNANCE.md  LICENSE  LICENSE-COMMERCIAL.md  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  TESTING.md  lefthook.yml  package-lock.json  package.json  registry.json  rust-toolchain.toml  server.json  stats.json  tsconfig.json  vitest.config.ts
.changeset/: agent-backend-matrix.md  approval-memory-controls.md  bright-browser-targets.md  browser-adapter-quality.md  explicit-deny-rules.md  juejin-leetcode-adapters.md  macos-dynamic-actions.md  persistent-approvals.md  quiet-lease-traces.md  release-0-221-0.md  replay-min-score-gate.md  resource-bound-approval-memory.md  run-compare-score.md  run-context-check-summaries.md  run-context-score-gates.md  run-environment-snapshot.md  run-event-stream.md  run-evidence-score-checks.md  run-replay-probes.md  run-score-gate-output.md  run-summary-evidence.md  runtime-deny-summaries.md  runtime-policy-trace.md  runtime-resource-deny.md  shatalov-v212.md  surface-expansion.md  v0-212-1-audit-hardening.md  v0-213-0-agent-native-output.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
bench/: README.md  adapter-call.ts  cold-start.ts  mcp-catalog.ts  opencli-parity.ts  report.ts  results.json  self-discovery.ts  surface-coverage.ts  tokens.ts  tsconfig.json
contributing/: COPY.md  README.md  acp.md  adapter.md  branch-protection.md  cua.md  mcp.md  release.md  schema.md  transport.md
crates/unicli-atspi/: Cargo.toml  README.md
crates/unicli-atspi/src/: errors.rs  input.rs  invoke.rs  main.rs  refs.rs  screenshot.rs  tree.rs
crates/unicli-uia/: Cargo.toml  README.md
crates/unicli-uia/src/: errors.rs  input.rs  invoke.rs  main.rs  screenshot.rs  tree.rs
docs/: ADAPTER-FORMAT.md  AGENT-INSTALL.md  ARCHITECTURE.md  AVANTE.md  BENCHMARK.md  COMPARE.md  CONTEXT-LINT.md  EVAL-HARNESS.md  MCP-GATEWAY.md  MIGRATING-FROM-OPENCLI.md  PLUGIN.md  QUICKSTART.md  RECIPES.md  RELEASE-CADENCE.md  ROADMAP.md  SKILL-EXPORT.md  TASTE.md  THEORY.md  TRUSTED-PUBLISHER-SETUP.md  VERSIONING.md  VERSION_CODENAMES.md  adapters-catalog.json  faq.md  glossary.md  how-it-works.md  index.md  page-index.json  refs.bib  release-info.json  site-index.json
extension/: manifest.json
internal/: TASTE.md  refs.bib
scripts/: adapter-health-probe.ts  bench.ts  bootstrap-adapter-tests.ts  boundary-guard.ts  build-agents.ts  build-manifest.js  build-readme.ts  build-sidecars.mjs  bulk-quarantine.ts  check-adapter-test-coverage.ts  check-commit-msg.sh  check-exports-count.ts  check-public-docs.ts  compute-live-smoke.ts  conformance-report.ts  count-consistency.ts  count-stats.ts  dedupe-yaml-banner.ts  demo-session.sh  gen-demo.sh  generate-catalog.ts  generate-docs-agent-assets.ts  indexnow-ping.sh  (+15 more)
(+2268 files in other folders)
