[workspace]
resolver = "2"
members = [
  "crates/unicli-shared",
  "crates/unicli-uia",
  "crates/unicli-atspi",
]

[workspace.package]
version = "0.218.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"
homepage = "https://github.com/olo-dot-io/Uni-CLI"
repository = "https://github.com/olo-dot-io/Uni-CLI"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.12"
anyhow = "1.0.97"
clap = { version = "=4.5.53", features = ["derive"] }
rustc-hash = "2.1"
parking_lot = "0.12"
once_cell = "1.20"
unicli-shared = { path = "crates/unicli-shared" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-sidecar]
inherits = "release"
panic = "unwind"

[profile.ci]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
strip = false
debug = 1
